fixing some styles that were too global in nature for headers and spacing; added link to footer logo and alt tags to both logos

--- a/resources/assets/sass/base/_base.scss
+++ b/resources/assets/sass/base/_base.scss
@@ -5,8 +5,11 @@ body {
 }
 
 a:link, a:visited {
-	text-decoration: underline;
 	color: $orange;
+
+	&:not(.btn) {
+		text-decoration: underline;
+	}
 
 	&:hover {
 		text-decoration: none;
